# tools

./: .gitignore  Lottery.py  PomodoroTimer.py  README.md  pyproject.toml
PomodoroTimer/: PomodoroTimer.py
SegmentTranslator/: MyDict.py  SegmentTranslator.py
